新增rem 转换插件

--- a/vue Router/src/assets/index.scss
+++ b/vue Router/src/assets/index.scss
@@ -1,7 +1,16 @@
 
 body{
     background: #f66;
-    h2,h3{
+    h1,h2,h3{
         background: blueviolet;
+        font-size: 30px;
+    }
+    a{
+        
+        font-size: 30px;
     }
 }
+
+.hello{
+    background: red;
+  }
