--- a/vue Router/src/assets/css/path.scss
+++ b/vue Router/src/assets/css/path.scss
@@ -2,3 +2,10 @@
     height: 500px;
     background: url(./../images/timg.jpg) no-repeat center center;
 }
+img{
+    max-width: 100%;
+    height: auto;
+}
+.hello{
+    background: green;
+  }
